# cc_lab2

./: .gitignore  README.md  commands.py  graphs.R  meta.py  patterns.py  results.csv
bruteforcer/: Cargo.toml
bruteforcer/src/: args.rs  encodings.rs  instructions.rs  instructions_x86_64.rs  main.rs  optimize.rs  playground.rs
bruteforcer/src/abstract_instructions/: eight.rs  four.rs  mod.rs  single.rs  sixteen.rs
examples/: avx2.c  avxexample1.c  neon1.c  permute.cu  rgb.c
examples/exampleOutput/: disasm_neon2_o3.txt
templates/: asm.py  base.py  base1.py  base2.py  cuda.py  cuda1.py  cuda2.py  simd.py  simd1.py  simd2.py
