[package]
name = "bruteforcer"
version = "0.1.0"
edition = "2021"
author = "Kendall Tauser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
itertools = "0.12.1"
libc = "0.2.153"
rand = "0.8.5"
